ums bug fix, aligntment- & style-fixes in overview header

--- a/app/src/Components/OverviewNavBar.css
+++ b/app/src/Components/OverviewNavBar.css
@@ -1,16 +1,15 @@
 
 
 div#overviewArea {
-    height: 37pt;
+    height: 47px;
     width: 100%;
     background-color: #2c58a6;
     display: flex;
 }
 
 h1#overviewText {
-    position: absolute;
-    top: 10%;
-    left: 45%;  
-    text-align: center;
+    margin: auto;
     color: white;
+    font-family: "Arial Normal", "Arial", sans-serif;
+    font-weight: bolder;
 }
